force-app/main/default/objects/RateOverride__c/RateOverride__c.object-meta.xml
<CustomObject>
    <label>Rate Override</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Overrides</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>