force-app/main/default/objects/RateOverride__c/fields/baseRate__c.field-meta.xml
<CustomField>
    <fullName>baseRate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Base Rate</label>
    <referenceTo>ReadyTalk_Rate__c</referenceTo>
    <relationshipLabel>Rate Overrides</relationshipLabel>
    <relationshipName>RateOverrides</relationshipName>
    <type>Lookup</type>
</CustomField>