force-app/main/default/objects/RateOverride__c/fields/chargeCode__c.field-meta.xml
<CustomField>
    <fullName>chargeCode__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Charge Code</label>
    <referenceTo>ChargeCode__c</referenceTo>
    <relationshipLabel>Rate Overrides</relationshipLabel>
    <relationshipName>Rate_Overrides</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>