force-app/main/default/objects/RateOverride__c/fields/customSchedule__c.field-meta.xml
<CustomField>
    <fullName>customSchedule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Custom Schedule</label>
    <referenceTo>CustomSchedule__c</referenceTo>
    <relationshipLabel>Rate Overrides</relationshipLabel>
    <relationshipName>RateOverrides</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>