force-app/main/default/objects/RateOverride__c/fields/RT_Rate_Override_ID__c.field-meta.xml
<CustomField>
    <fullName>RT_Rate_Override_ID__c</fullName>
    <externalId>true</externalId>
    <label>RT Rate Override ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>