force-app/main/default/objects/RateOverride__c/fields/startDate__c.field-meta.xml
<CustomField>
    <fullName>startDate__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>